--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
    <!-- header con logo e nome della testata -->
    <header>
-        
+        <img id="logo" src="img\logo.svg" alt="logo">
    </header>
    
    <!-- corpo della pagina  -->
