creazione titolo e prima sezione

--- a/index.html
+++ b/index.html
@@ -17,12 +17,21 @@
    <main>
        <!-- titolo e immagini dell'articolo -->
     <section>
-        
+        <h1>
+            Internet deve essere al "servizio del bene" pubblico:
+            Il manifesto di Tim Berners-lee
+        </h1>
+        <p class="sottotitolo">Scritto da <span id="booleaner">The Booleaner</span></p>
+        <p class="annotazione">il 10/10/2020</p>
+        <img class="main-img" src="img\tim-1.jpg" alt="Tim Berners-lee"><img class="main-img" src="img\tim-2.jpg" alt="Tim Berners-lee">
+        <p class="subtitle">1st Photo: Jhon S. and James L. Knight Foundation, by Scott Henrichsen </p>
+        <p class="subtitle">2nd Photo: Wikimedia, by Paul Clarke</p>
     </section>
 
     <!-- paragrafi e tabelle -->
     <section>
-        
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat aspernatur culpa aliquam esse cupiditate dicta? In cum ipsa animi quibusdam ducimus corporis nihil ea nobis enim consectetur! Dolorem, nisi quisquam.
+        </p>
     </section>
    </main>
 
