creazione della tabella

--- a/index.html
+++ b/index.html
@@ -30,8 +30,53 @@
 
     <!-- paragrafi e tabelle -->
     <section>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat aspernatur culpa aliquam esse cupiditate dicta? In cum ipsa animi quibusdam ducimus corporis nihil ea nobis enim consectetur! Dolorem, nisi quisquam.
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <span id="evidenziato"> aspernatur culpa aliquam esse cupiditate dicta?</span> In cum ipsa animi quibusdam ducimus corporis nihil ea nobis enim consectetur! Dolorem, nisi quisquam.
         </p>
+
+        <!-- elenco di Lorem -->
+        <ul>
+            <li>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            </li>
+            <li>
+                Necessitatibus cumque soluta id veritatis perspiciatis quas et assumenda aspernatur
+            </li>
+            <li>
+                quidem facere quibusdam neque officia est provident exercitationem possimus corrupti inventore voluptate?       
+            </li>
+        </ul>
+
+        <table>
+            <tr class="theader">
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor</td>
+            </tr>
+            <tr class="alternate-row">
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor</td>
+                <td>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum voluptatibus, sequi, dolore eum voluptatem soluta doloribus explicabo tenetur, nesciunt magni perspiciatis quos! Est rem esse aliquam placeat velit ipsam. Enim.
+
+                </td>
+            </tr>
+            <tr>
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor</td>
+                <td>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum voluptatibus, sequi, dolore eum voluptatem soluta doloribus explicabo tenetur, nesciunt magni perspiciatis quos! Est rem esse aliquam placeat velit ipsam. Enim.
+
+                </td>
+            </tr>
+            <tr class="alternate-row">
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor</td>
+                <td>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum voluptatibus, sequi, dolore eum voluptatem soluta doloribus explicabo tenetur, nesciunt magni perspiciatis quos! Est rem esse aliquam placeat velit ipsam. Enim.
+                </td>
+            </tr>
+            
+        </table>
     </section>
    </main>
 
