creazione del footer

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <!-- paragrafi e tabelle -->
     <section>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <span id="evidenziato"> aspernatur culpa aliquam esse cupiditate dicta?</span> In cum ipsa animi quibusdam ducimus corporis nihil ea nobis enim consectetur! Dolorem, nisi quisquam.
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <span class="evidenziato"> aspernatur culpa aliquam esse cupiditate dicta?</span> In cum ipsa animi quibusdam ducimus corporis nihil ea nobis enim consectetur! Dolorem, nisi quisquam.
         </p>
 
         <!-- elenco di Lorem -->
@@ -77,13 +77,24 @@
             </tr>
             
         </table>
+
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim, odit architecto quaerat <span class="evidenziato"> molestias id exercitationem, laborum minus magnam commodi</span> voluptate ex illo et voluptates molestiae ipsa vel facilis dolore reprehenderit?
+        </p>
     </section>
    </main>
 
    <!-- footer con i suggerimenti -->
    <footer>
-
+       <p>potrebbero interessarti</p>
+        <div id="monitor" class="suggerimenti">
+            <h3>Lorem ipsum dolor.</h3>    
+        </div>
+        <div id="graph" class="suggerimenti">
+            <h3>Lorem ipsum dolor.</h3>    
+        </div>
    </footer>
+
     
 </body>
 </html>
