fix problema immagini

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
    <!-- footer con i suggerimenti -->
    <footer>
-       <p>potrebbero interessarti</p>
+       <p id="suggestion">Potrebbero interessarti</p>
         <div id="monitor" class="suggerimenti">
             <h3>Lorem ipsum dolor.</h3>    
         </div>
